# PIPEX

./: .gitignore  CMakeLists.txt  Makefile  error.c  input.txt  main.c  output.txt  pipex  pipex.c  pipex.h  utils.c
libft/: ft_split.c  ft_strncmp.c  manual.txt
